Fixed: On page scroll on mobile devices / Improved: Escaped social links

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -319,6 +319,7 @@ p.post-btm-tags, p.post-btm-cats {
 /* -------------------------------------------------- */
 .post-pages {
   display: flex;
+  align-items: center;
   justify-content: center;
   position: relative;
   width: 100%;
